--- a/layout/showcase.html
+++ b/layout/showcase.html
@@ -93,5 +93,7 @@
         <img src="img/cats/hangover.jpg" alt="" class="img-circle">
         <img src="img/cats/wise.jpg" alt="" class="img-circle">
     </section>
+
+    <script src="vendor/timing.js/timing.js"></script>
 </body>
 </html>
