--- a/layout/showcase.html
+++ b/layout/showcase.html
@@ -4,16 +4,7 @@
     <meta charset="UTF-8">
     <title>Sooo slow!</title>
 
-    <!-- Of course, we need jQuery -->
-    <script src="vendor/jquery/dist/jquery.js"></script>
-    <script src="vendor/jqueryui-browser/ui/jquery-ui.js"></script>
-
-    <!-- Bootstrap is awesome -->
-    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
-    <script src="vendor/bootstrap/dist/js/bootstrap.js"></script>
-
-    <script src="js/main.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bundle.css">
 </head>
 <body>
     <h2>Emoji are cool!</h2>
@@ -89,11 +80,16 @@
     <h2>And so are cats!</h2>
 
     <section class="cats-list">
-        <img src="img/cats/angry.jpg" alt="" class="img-circle">
-        <img src="img/cats/hangover.jpg" alt="" class="img-circle">
-        <img src="img/cats/wise.jpg" alt="" class="img-circle">
+        <img data-src="img/cats/angry.jpg" alt="" class="img-circle">
+        <img data-src="img/cats/hangover.jpg" alt="" class="img-circle">
+        <img data-src="img/cats/wise.jpg" alt="" class="img-circle">
     </section>
 
+    <!-- Of course, we need jQuery -->
+    <script src="vendor/jquery/dist/jquery.js"></script>
+
     <script src="vendor/timing.js/timing.js"></script>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
