gzip, cache, cdn

--- a/layout/showcase.html
+++ b/layout/showcase.html
@@ -86,7 +86,7 @@
     </section>
 
     <!-- Of course, we need jQuery -->
-    <script src="vendor/jquery/dist/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 
     <script src="vendor/timing.js/timing.js"></script>
 
